chore(blog): small change to authors.yml

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,5 +1,5 @@
 ropletal:
   name: Robin Opletal
-  title: OSKO maintainer
+  title: OSKO maintainer, Infrastructure Engineer @ heureka.group
   url: https://robinopletal.com
   image_url: https://codeberg.org/avatars/8c7fe1977d7e829152f7c71d5407b2c1?size=512
